# infinitetalk-index-tts-gen

./: .gitignore  .gitmodules  connect.md  generation.py  index-tts-install.sh  infinitetalk-install-conda.sh  infinitetalk-install.sh  install.sh  readme.md
test-api/: README.md  api.py  boto3_utils.py  handler.py  main.py  pyproject.toml  rp_handler.py  test_input.json  utils.py
