[project]
name = "test-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.19",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.128.0",
    "pydantic>=2.12.5",
    "runpod>=1.8.1",
    "uvicorn>=0.40.0",
    "websockets>=15.0.1",
]
